part_1/ex_107/log-output-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /logoutput
        pathType: Prefix
        backend:
          service:
            name: log-output-app-svc
            port:
              number: 5000
